--- a/aquarium-lights/http_resources/style.css
+++ b/aquarium-lights/http_resources/style.css
@@ -1,3 +1,19 @@
-body .body {
+body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
+}
+
+div.relayOn {
+  background-color: #00FF00;
+}
+
+div.relayOff {
+  background-color: #FF0000;
+}
+
+div.automaticOn {
+  background-color: #00FF00;
+}
+
+div.automaticOff {
+  background-color: #FF0000;
 }
